# Epitech-Bomberman

./: .clang_complete  .coveralls.yml  .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  build_config.h.in  codeStyle.cfg  diagramme  highScoreSample.cpp  index.html  install.sh  params.json  rankingFile  snippets.cson  testL  todolist
TMP-NEED-REMOVE/luaSample/: Binding.cpp  CMakeLists.txt  Makefile  main.cpp
TMP-NEED-REMOVE/testSample/: Makefile  main.cpp
WindowInstaller/: Bundle.wxs  Media.wxs  Product.wxs  WindowInstaller.msi  WindowInstaller.wixproj  bomberman-installer.wixproj  full-Install.wixproj
WindowInstaller/game-installer/: Media.wxs  Product.wxs  game-installer.wixproj
WindowInstaller/game-installer/tmpBin/Release/: gameInstaller.msi  gameInstaller.wixpdb
asset/installer/: license.rtf  license.txt
asset/installer/TMPwindowInstaller/: BombermanInstaller.wixproj  Media.wxs  Product.wxs
asset/perso/: perso.fbx
asset/scriptAI/: iaeasy.lua  iahard.lua  iamiddle.lua  script.lua
lib/IrrAssimp/: Makefile  main.cpp
lib/IrrAssimp/Media/: export.obj.mtl
lib/assimp/assimp-3.2/: CMakeCache.txt  Makefile  assimp.pc  cmake_install.cmake  cmake_uninstall.cmake  revision.h
lib/assimp/assimp-3.2/code/: Makefile  cmake_install.cmake
lib/assimp/assimp-3.2/tools/assimp_cmd/: Makefile  cmake_install.cmake
lib/assimp/lib/window/: assimp-vc130-mt.lib
lib/google-test/: CMakeLists.txt
lib/irrlicht/source/Irrlicht/: CAnimatedMeshSceneNode.h
lib/lua/LuaBridge/detail/: Userdata.h
lib/lua/LuaInterpreter/lib/window/: lua5.3.0.lib
luaSample/: Binding.cpp  Binding.hpp  Makefile  main.cpp  script.lua
media/: perso.3ds
source/: AStar.hpp  Application.cpp  Application.hpp  ApplicationState.hpp  Board.cpp  Board.hpp  BombManager.cpp  BombManager.hpp  CMakeCache.txt  CacheManager.hpp  Cell.hpp  Direction.hpp  ExplodingBomb.cpp  Explosion.cpp  Explosion.hpp  Game.cpp  Game.hpp  Generator.cpp  HighScore.cpp  HighScore.hpp  IBlock.hpp  IBomb.hpp  IEffect.hpp  IEntity.hpp  IPlayer.hpp  IndestructibleBlock.cpp  InputListener.cpp  InputListener.hpp  Irrlicht.cpp  Irrlicht.hpp  IrrlichtComponent.hpp  ItemID.hpp  Makefile  Map.hpp  PowerUPs.hpp  SpeedUPEffect.hpp  SpeedUPPowerUP.cpp  TimeOut.cpp  TimeOut.hpp  algomap  (+2 more)
source/astar/: IAStar.hpp  NeighborAStar.cpp  NeighborAStar.hpp  TrueAStar.cpp  TrueAStar.hpp
source/binding/: AIFunctions.cpp  AIFunctions.hpp  AiFunctions.cpp  Binding.cpp  Binding.hpp  Research.cpp  Research.hpp  script.lua
source/blocks/: DestructibleBlock.cpp  DestructibleBlock.hpp  IBlock.hpp  IndestructibleBlock.cpp  IndestructibleBlock.hpp  Pillar.cpp  Pillar.hpp  Wall.cpp  Wall.hpp
source/bombs/: Beam.cpp  Beam.hpp  ExplodingBomb.cpp  ExplodingBomb.hpp  IBomb.hpp
source/effects/: AddExplosingBombEffect.cpp  AddExplosingBombEffect.hpp  AddPowerEffect.cpp  AddPowerEffect.hpp  IEffect.hpp  SpeedUPEffect.cpp  SpeedUPEffect.hpp
source/environment/: Board.cpp  Board.hpp  Map.hpp
source/irrassimp/: IrrAssimp.cpp  IrrAssimpImport.cpp
source/loader/: BombAttr.cpp  BombAttr.hpp  Loader.cpp  Loader.hpp  PlayerAttr.cpp  PlayerAttr.hpp  SaveInfo.cpp  SaveInfo.hpp  TimeOutAttr.cpp  TimeOutAttr.hpp
source/music/: ISound.hpp  Music.cpp  Music.hpp  MusicBox.cpp  MusicBox.hpp  SoundBox.cpp  SoundBox.hpp
source/players/: AIPlayer.cpp  AIPlayer.hpp  APlayer.cpp  APlayer.hpp  HumanPlayer.cpp  HumanPlayer.hpp  IPlayer.hpp
source/players/binding/: AIFunctions.hpp  AiFunctions.cpp  Binding.cpp  Binding.hpp  script.lua
source/powerups/: AddExplosingBombPowerUP.cpp  AddExplosingBombPowerUP.hpp  AddPowerPowerUP.cpp  AddPowerPowerUP.hpp  IPowerUP.hpp  PowerUPs.cpp  PowerUPs.hpp  SpeedUPPowerUP.cpp  SpeedUPPowerUP.hpp
source/terrain/: Board.cpp  Board.hpp  Cell.hpp  Map.hpp
source/thread/: ExplosionTask.cpp  ExplosionTask.hpp  ITask.hpp  Makefile  SafeQueue.hpp  ThreadPool.cpp  ThreadPool.hpp  TimeOutAsyncTask.cpp  TimeOutAsyncTask.hpp  main.cpp
source/threadPool/: ITask.hpp  SafeQueue.hpp  ThreadPool.cpp  ThreadPool.hpp  TimeOut.hpp  main.cpp
source/ui/: ASubLayout.cpp  ASubLayout.hpp  IObject.cpp  IObject.hpp  controlsScene.cpp  echapScene.cpp  echapScene.hpp  gameScene.cpp  gameScene.hpp  image.cpp  image.hpp  layout.cpp  layout.hpp  listener.hpp  lobbyScene.cpp  lobbyScene.hpp  mainScene.cpp  rect.cpp  rect.hpp  settingsScene.cpp  settingsScene.hpp  text.cpp  text.hpp  ui.cpp  ui.hpp
source/ui/scene/: ASubLayout.cpp  ASubLayout.hpp  controlsScene.hpp  creditScene.cpp  creditScene.hpp  echapScene.cpp  echapScene.hpp  endGameScene.cpp  endGameScene.hpp  gameScene.cpp  gameScene.hpp  lobbyScene.cpp  lobbyScene.hpp  mainScene.cpp  mainScene.hpp  rankingScene.cpp  rankingScene.hpp  replayScene.cpp  replayScene.hpp  settingsScene.cpp  settingsScene.hpp  splashArtScene.cpp  splashArtScene.hpp  tipsScene.cpp  tipsScene.hpp
source/unitTest/: ApplicationTest.cpp  Block.cpp  BombManagerTest.cpp  ExplosionTest.cpp  GameTest.cpp  Makefile  TimeOutTest.cpp  main.cpp  tuto.cpp
source/unitTest/blocks/: DestructibleBlockTest.cpp  IndestructibleBlockTest.cpp
source/unitTest/bombs/: BeamTest.cpp  ExplodingBombTest.cpp
source/unitTest/effects/: AddExplosingBombEffectTest.cpp  AddPowerEffectTest.cpp  SpeedUPEffectTest.cpp
source/unitTest/environment/: BoardTest.cpp
source/unitTest/powerups/: AddExplosingBombPowerUPTest.cpp  AddPowerPowerUPTest.cpp  PowerUPs.cpp  SpeedUPPowerUPTest.cpp
source/unitTest/utils/: ChronometerTest.cpp  MemoryFileTest.cpp
source/utils/: Action.hpp  CacheManager.hpp  Chronometer.cpp  Chronometer.hpp  Direction.hpp  Generator.cpp  Generator.hpp  InputListener.cpp  InputListener.hpp  MemoryFile.cpp  MemoryFile.hpp  StaticTools.cpp  StaticTools.hpp
